k8s/infra/ingress/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geoblock
spec:
  plugin:
    geoblock:
      silentStartUp: false
      allowLocalRequests: false
      logLocalRequests: false
      logAllowedRequests: false
      logApiRequests: true
      api: "http://iplookup:8000/api/ip/{ip}"
      apiTimeoutMs: 3000 # optional
      addCountryHeader: true
      allowUnknownCountries: false
      redirectUrlIfDenied: "https://errors.cocointhe.cloud/418.html"
      cacheSize: 25
      countries:
        - FR
