k8s/infra/ingress/oidc-config.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc
spec:
  plugin:
    oidc:
      sessionEncryptionKey: ENC[AES256_GCM,data:RZyAMMCygdF9CxM8KMG+Xg/KG0kLQYBZqKX5nhLkX6K532N/ZDkLXlimrHcqCHEQh7ETSYF4gdxcc0U1pICHKg==,iv:XrCuBqN7oZNLEbmHATV7KxRUNDi+BMom06PftOVX1FM=,tag:GJuBjLCK7NNdkCfIMhKBRA==,type:str]
      providerURL: ENC[AES256_GCM,data:VIsLsehqUFtX9JP5CYDqHlb7WLNAE8VzaZ9qtuz3PjM=,iv:kfIw+JVKiH0dKQk05iV0UB939xn57F986YSV92UhDuo=,tag:2lH9LHXyRiso/OoZ2xeenQ==,type:str]
      ClientId: ENC[AES256_GCM,data:r5Iq6VE5DFnGwg161J7wzYepvJKIh5I7r+o6RMVID9xY2GM9,iv:DrbCkKLK+9noGuQsGvwlhlfQcKstFWzoLTns4Dsoxaw=,tag:r2spKoOiNsBokgtjt7MuJg==,type:str]
      ClientSecret: ENC[AES256_GCM,data:o2V3P8RZWOhK7ZPcermgUfU2oTW02hqdIdhetwxpvvg=,iv:B6wRYeLCJE0CZaOAq8hRtksGZP9Z1Rmqq5OKM0G/VXI=,tag:lsqueXvlnXOitfFZTl6bpg==,type:str]
      callbackURL: ENC[AES256_GCM,data:c1I2NtYTql8djc/6HKTHfQ==,iv:R3PVc6gprHHyi9V5rhHyKbBNsFYHg+8gV4BIDSYmspM=,tag:lbt6iYQIiwHMqYCXwXoh7A==,type:str]
sops:
  age:
    - recipient: age1pq1zu5fgd0qzk02p0g5mdl9tvswq0amuy75280fc9mfzvtgsl90t0axzrjr9zv8x64efg355zdp02zzpyzpzmtp4p7dw64etgereu9qsahc52wfyqurcf8cmxett5ngs6fcg6775gsvzyp9thy4gw9eduagk2pdh84wapus946m4a69v8yc0nxe5d8c82vszqru6z2tutekjt5qnv8duya6kve8v079lhq9q0layzgj2kp2qkvvsrz65aauv3nvy2aydfkjkyyx3gacl7ec9fgfv7nnyxhddfr6tkayyd0p99hej4j30jtzxdclgucsv94gx7d35pldkfynrgdv2lxq3a0tfs37wtzzmsrq03vt9ysh3ntmf44q4wf88xqppc6t9pjs5auudhxd0ffgjd5qyw3e6pn5c02xttkxvttludkcesj5dhmzj3835ecg9yjemvx7flzseg5xmfzgkzduwd0say5s [...]
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDliWHJsWFhy
[...]
        /SqsJNxxnAVzbuU=
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-28T13:50:49Z"
  mac: ENC[AES256_GCM,data:tpBCgpXkSNOfaVjP4/AkDOKmNlgqNeycj0MhQiaEKmfAWZWqxkS+64PQcPzI2R4pWyxYKFBba8+SwPh2IDL406WU5Q5bOhWxDmrDI8HRq9INmhtsvIht4fpqBHSm/8LIGWRM+Xh1h2nwnh7kerJaIh8nxxWmYWhjs1xDA3QN1jY=,iv:k5okiBZozrRjz7zAsRCJ/6p0SYBYSeQTLL2UgFenP5g=,tag:jxvAZgzti/R8iswqdb/kvw==,type:str]
  encrypted_regex: ^oidc$
  version: 3.11.0
