k8s/infra/ingress/oidc-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc
  namespace: ingress
spec:
  plugin:
    traefikoidc:
      providerURL: https://pocketid.cocointhe.cloud
      clientID: ENC[AES256_GCM,data:zhNqpiZPvkFv+KXVUR3oPi5zFMIKMPJxLSnYIuMNyrWFa6RD,iv:edcLBLShTRKIYGYYVlIvqLl6JoUSI9VGaKu6TShvjwE=,tag:9WK+Dzk5Is9SGyEjEIFIFQ==,type:str]
      clientSecret: ENC[AES256_GCM,data:MWQhw75UgbtPFSXwGBJjpp+9G8jeCW4yI0Zg3cMsu+c=,iv:MumhdNY8cIrJ4C6dTqYay+uzMEUKRXQJbxA2ol8rLcE=,tag:Bmy2zQE+PUlNDbsAbvDCew==,type:str]
      sessionEncryptionKey: ENC[AES256_GCM,data:wzDDc+TbupJYtqeMrihf3uHOC85sOxBwBSxi7LJiR+7AwcucWHsPR15T6t3FRYjuSadVsB9afdHhPMK1JjRIQg==,iv:FngLq1rKaV/GM3A+yAeAIsJSsaBawWYfLe2RpqRjjpg=,tag:AdGaF1MXXz1dFGkZlyp19w==,type:str]
      callbackURL: /oauth2/callback
      logoutURL: /oauth2/logout
sops:
  age:
    - recipient: age16xc3m2q69s2le4hah3pcne50qn6mljhgc9mxekskwf0mp8fc0vaq5q5dz2
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnc0c4cEFoM1pOY2VNSldG
[...]
        /w5nIgoYsoSXI1IOOMSUEy8iLcH8OyM/Tk8qeUMd5wHXXmg7/csseQ==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-10-03T15:50:41Z"
  mac: ENC[AES256_GCM,data:icapegO2PYy/qLEu0gW3KGuL4ky+xmzN2GjG+FYmRof6um4++moZIKuOCjViFFCl5CXFViE95CMA6UGbVBdRcZ8yUwmoH5SmhJ/yqKprOlNY3TGFHF8NUFgFB3bx87k78C3exomwGHIIQN9BYItvXWgeu/xfZ+Kn+WVPaEfes/c=,iv:0QBPBHep+al9CFsfl5w61G/1VlZ9Gh+uecz2+rvof4Y=,tag:+Ej8ov+oa6TpkmcHhVVQKQ==,type:str]
  encrypted_regex: (clientID|clientSecret|sessionEncryptionKey)
  version: 3.11.0
