k8s/infra/ingress/tailscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale
spec:
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      hostNetwork: true
      containers:
        - name: tailscale
          image: tailscale/tailscale:latest
          volumeMounts:
            - mountPath: "/etc/ts"
              name: tailscale-data
      volumes:
        - name: tailscale-data
          persistentVolumeClaim:
            claimName: tailscale-data
